# routes/index.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express.Router();
 const students = require("../controllers/studentsController");
 const { handleValidationErrors, blogSchema } = require("../helpers/validation");
+const passport = require("passport");
 
 // // Inside route definitions
 // router.post(
@@ -17,10 +18,10 @@ const { handleValidationErrors, blogSchema } = require("../helpers/validation");
 //   students.updatestudents
 // );
 
-router.get("/", (req, res) => {
-  //#swagger.tags=['Hello World']rs
-  res.send("Hello World");
-});
+// router.get("/", (req, res) => {
+//   //#swagger.tags=['Hello World']rs
+//   res.send("Hello World");
+// });
 
 router.get("/students", students.getAllstudents);
 router.get("/students/:id", students.getstudents);
@@ -29,9 +30,9 @@ router.put("/students/:id", students.updatestudents);
 router.delete("/students/:id", students.deletestudents);
 
 //login and logout routers
-router.get("/login", passport.authenticate("github"), (req, res) => {});
+router.get("/login", passport.authenticate("GitHubUser"), (req, res) => {});
 
-router.get("logout", function (req, res, next) {
+router.get("/logout", function (req, res, next) {
   req.logout(function (err) {
     if (err) {
       return next(err);
